curves/static/curves/css/landing-page.css
/*!
 * Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

@font-face {
    font-family: Dense;
    src: url('../fonts/Dense-Regular.otf')
}

@font-face {
    font-family: Dual;
    src: url('../fonts/Dual-300.otf')
}

@font-face {
    font-family: Aller;
    src: url('../fonts/Aller_Rg.ttf');
}

@font-face {
    font-family: Exo;
    src: url('../fonts/Exo-Regular.otf');
}

@font-face {
    font-family: Cardo;
    src: url('../fonts/Cardo104s.ttf');
}


@font-face{
    font-family: Raleway;
    src: url('../fonts/Raleway-Regular.ttf');
}

.modal-wide .modal-dialog {
  width: 80%; /* or whatever you wish */
}

body,
html {
    background: url(../img/Princeton.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; 
    width: 100%;
    height: 100%;
    overflow: auto;
}


body,
h1,
h2,
h3,
h4,
h5,
h6 {
font-family: Raleway, serif;
    font-weight: 500;
}

h1 {
    font-family: Palatino, serif;
    font-weight: 500;
}


.intro-header {
    text-align: center;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.intro-message {
    width: 70%;
}

.topContainer {
    margin: auto;
    padding-top: 20px;
    padding-bottom:20px;
    border-radius: 10px;
    /*box-shadow: 5px 5px 50px rgba(197,246,252,1);*/
    box-shadow: 5px 5px 30px rgba(0,0,0,1);
    border: 1px solid rgba(10, 10, 10, 0.7);
    background: rgb(255, 154, 51);   
    background: rgba(255,120, 0 , 0.7);
    /*background: rgba(230, 91, 5, 0.7);*/
}

.topContainer > h1 {
    margin: 0px;
    text-shadow: 2px 2px 2px rgba(0,0,0,0.6);
    font-size: 50px;
    color: white;
}

.intro-message > h3 {
    text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
    font-family:courier;
    font-weight: 600;
}

/*.theStrip {
    position: relative;
    top: -20px;
    left: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}*/

#autocomplete{
/*    position: relative;
    float: left;*/
    border-top:thin solid  #e5e5e5;
    border-right:thin solid #e5e5e5;
    border-bottom:0;
    border-left:thin solid  #e5e5e5;
    box-shadow:0px 1px 1px 1px #e5e5e5;
    height:30px;
    outline:0; 
    width:183px;
}

#button-holder{
/*    float: left;
    position: relative;
    top: -10px;
    left: -40px;*/
/*    background-color:#f1f1f1;
    border-top:thin solid #e5e5e5;
    box-shadow:1px 1px 1px 1px #e5e5e5;*/
    cursor:pointer;
    height:27px;
    margin:11px 0 0 0;
    text-align:center;
    width:40px;
}
  
#button-holder input{
    margin:4px;
    width:20px; 
}


.modal-backdrop {
   background-color: rgb(0,0,0);
}

.modal-content {
    font-size: 10px;
    background: rgba(230, 91, 5, 0.95);
    color: rgb(256, 256, 256);
}

#autocomplete {
    margin-left: auto;
    margin-right: auto;
    width: 85%;
}

/*.navbar.navbar-fixed-bottom {
    background: rgba(230, 91, 5, 0.5);
    width: 10%;
    margin: auto;
}
*/


@media(max-width:767px) {
    /*.intro-message {
        padding-bottom: 15%;
    }*/

    .intro-message > h1 {
        font-size: 3em;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
    }

    .form-inline > button {
        display:none;
    }
}

body.modal-open { overflow:inherit; padding-right:inherit !important; }

.btn-search {
  background-color: hsl(0, 0%, 16%) !important;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5b5b5b", endColorstr="#282828");
  background-image: -khtml-gradient(linear, left top, left bottom, from(#5b5b5b), to(#282828));
  background-image: -moz-linear-gradient(top, #5b5b5b, #282828);
  background-image: -ms-linear-gradient(top, #5b5b5b, #282828);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5b5b5b), color-stop(100%, #282828));
  background-image: -webkit-linear-gradient(top, #5b5b5b, #282828);
  background-image: -o-linear-gradient(top, #5b5b5b, #282828);
  background-image: linear-gradient(#5b5b5b, #282828);
  border-color: #282828 #282828 hsl(0, 0%, 11%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
  -webkit-font-smoothing: antialiased;
}
.typeahead {
    color: black;
}

.autocomplete-suggestions { font-size: 14px; border: 1px solid #999; background: #FFF; overflow: auto; color: black; text-overflow: ellipsis; cursor: default; }
.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
.autocomplete-selected { background: rgba(230, 91, 5, 0.3) }
.autocomplete-suggestions strong { font-weight: bold; color: rgba(230, 91, 5, 1); }
.autocomplete-group { padding: 2px 5px; }
.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }

.logo {
    opacity: 0.7;
    width: 80px;
    height: auto;
}

.bottomContainer {
    margin-top: 180px;
}

